fix(guide) Larger spacing between bottom and button

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -186,7 +186,7 @@ h2:after {
   border: 1px solid #ccc;
   background: #fff;
   text-align: center;
-  height: 220px;
+  height: 230px;
   margin-bottom: 20px;
   position: relative;
 }
